# attune-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
configs/: a100.yaml  a100_full.yaml  a100_train.yaml  debug.yaml  one_year.yaml  one_year_intraday.yaml  smoke.yaml
docs/diagrams/: attunefm-lite-architecture.mmd
docs/experiments/: one_year_intraday.md
docs/plans/: 2026-07-17-attunefm-lite-implementation.md
docs/specs/: 2026-07-17-attunefm-lite-design.md
src/attune/: __init__.py  api.py  attunefm.py  checkin.py  datasets.py  demo.py  reporting.py  rook.py  serving.py  synth.py  terra.py  terra_client.py  terra_sim.py  training.py
src/attune/capture/: __init__.py
src/attune/concordance_engine/: __init__.py  brief.py  concordance.py  engine.py  memory.py  safety.py
src/attune/packs/: __init__.py  attunefm.py  axes.py  base.py  pcos.py  veteran.py
tests/: test_api.py  test_attunefm.py  test_brief.py  test_checkin.py  test_concordance.py  test_datasets.py  test_demo.py  test_packs.py  test_rook.py  test_serving.py  test_synth.py  test_terra.py  test_terra_client.py  test_terra_sim.py  test_training.py
