[project]
name = "attune"
version = "0.1.0"
description = "Condition-agnostic concordance engine for at-home chronic condition management"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
attune-seed = "attune.synth:run"
attune-demo = "attune.demo:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attune"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
